--- a/tp-back-app/application/tp-back-internal-app/build.gradle
+++ b/tp-back-app/application/tp-back-internal-app/build.gradle
@@ -1,19 +1,6 @@
-plugins {
-    id 'java'
+bootJar {
+    enabled = true
 }
-
-group = 'com.trip.penguin'
-version = '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+jar {
+    enabled = false
 }
