--- a/tp-back-app/application/tp-back-internal-app/Dockerfile
+++ b/tp-back-app/application/tp-back-internal-app/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:17-jdk-slim
 RUN mkdir backend
-ARG JAR_FILE_PATH=build/libs/tp-back-internal-app-1.0.jar
-COPY ${JAR_FILE_PATH} /backend/tp-back-internal-app-1.0.jar
+COPY ./build/libs/tp-back-internal-app-1.0.jar ./backend/tp-back-internal-app-1.0.jar
 ENTRYPOINT ["java", "-jar", "backend/tp-back-internal-app-1.0.jar"]
