--- a/tp-back-app/application/tp-back-internal-app/Dockerfile
+++ b/tp-back-app/application/tp-back-internal-app/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
 RUN mkdir backend
-ADD ./build/libs/tp-back-internal-app-1.0.jar ./backend/tp-back-internal-app-1.0.jar
+ADD ./build/libs ./backend/
 ENTRYPOINT ["java", "-jar", "backend/tp-back-internal-app-1.0.jar"]
