--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -37,6 +37,9 @@ project('application:tp-back-internal-app') {
         testCompileOnly project(':system:tp-web-system')
         implementation project(':system:tp-web-system')
 
+        // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+        implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-test'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -56,7 +59,7 @@ project('domain:tp-user-domain') {
         implementation project(':core:tp-base-core')
         testCompileOnly project(':core:tp-base-core')
 
-//        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     }
 }
 
