chore: 스프링부트 모듈 구조 변경
- 기존 tp-resverse-domain 삭제
- 기존 tp-user-domain 삭제
- 신규 tp-rdb-domain 생성
위와같이 변경한 이유는 jpa간의 연관관계 설정시 구조를 잡기 어렵다고 판단.

--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -31,8 +31,8 @@ allprojects {
 
 project('application:tp-back-internal-app') {
     dependencies {
-        implementation project(':domain:tp-user-domain')
-        testCompileOnly project(':domain:tp-user-domain')
+        implementation project(':domain:tp-rdb-domain')
+        testCompileOnly project(':domain:tp-rdb-domain')
 
         testCompileOnly project(':system:tp-web-system')
         implementation project(':system:tp-web-system')
@@ -54,16 +54,7 @@ project('application:tp-batch-app') {
 }
 
 
-project('domain:tp-user-domain') {
-    dependencies {
-        implementation project(':core:tp-base-core')
-        testCompileOnly project(':core:tp-base-core')
-
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    }
-}
-
-project('domain:tp-reserve-domain') {
+project('domain:tp-rdb-domain') {
     dependencies {
         implementation project(':core:tp-base-core')
         testCompileOnly project(':core:tp-base-core')
