--- a/tp-back-app/settings.gradle
+++ b/tp-back-app/settings.gradle
@@ -6,14 +6,14 @@ findProject(':application:tp-back-internal-app')?.name = 'tp-back-internal-app'
 include 'application:tp-batch-app'
 findProject(':application:tp-batch-app')?.name = 'tp-batch-app'
 
-include 'domain:tp-user-domain'
-findProject(':domain:tp-user-domain')?.name = 'tp-user-domain'
-
-include 'domain:tp-reserve-domain'
-findProject(':domain:tp-reserve-domain')?.name = 'tp-reserve-domain'
+include 'domain:tp-rdb-domain'
+findProject(':domain:tp-rdb-domain')?.name = 'tp-rdb-domain'
 
 include 'system:tp-web-system'
 findProject(':system:tp-web-system')?.name = 'tp-web-system'
 
 include 'core:tp-base-core'
 findProject(':core:tp-base-core')?.name = 'tp-base-core'
+
+
+
