feat: 테이블 생성 진행 중
- USER_MS(회원) 테이블생성
- USER_BADGE(회원_뱃지) 테이블 생성
- REVIEW_MS(리뷰) 테이블 생성
- FOLLOW_MS(팔로우) 테이블 생성
- BADGE_MS(뱃지) 테이블 생성
- BADGE_CONDITION_MS(뱃지조건) 테이블 생성
- ALERT(알림함) 테이블 생성
- CS_MS(문의) 테이블 생성

--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -26,7 +26,10 @@ allprojects {
         mavenCentral()
     }
 
-    dependencies {}
+    dependencies {
+        implementation 'org.projectlombok:lombok:1.18.28'
+        testCompileOnly 'org.projectlombok:lombok:1.18.28'
+    }
 }
 
 project('application:tp-back-internal-app') {
