chore: Tp-rdb-domain 디펜던시 추가 - mysql추가 - 공통 의존성에 test추가

--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -42,9 +42,9 @@ project('application:tp-back-internal-app') {
 
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+        implementation 'org.springframework.boot:spring-boot-starter-test'
 
         implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-test'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     }
 }
@@ -62,6 +62,8 @@ project('domain:tp-rdb-domain') {
         implementation project(':core:tp-base-core')
         testCompileOnly project(':core:tp-base-core')
 
+        // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+        implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     }
 }
