--- a/tp-back-app/application/tp-back-internal-app/src/main/resources/application-dev.yaml
+++ b/tp-back-app/application/tp-back-internal-app/src/main/resources/application-dev.yaml
@@ -22,3 +22,14 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
+    properties:
+      hibernate:
+        show_sql: true # 로그에 ddl,dml 표시
+        format_sql: true # 쿼리 들여쓰기
+        use_sql_comments: true # 주석 표시
+
+logging:
+  level:
+    org:
+      hibernate.orm.jdbc.bind: trace # 바인딩 파라미터 확인
