--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -64,6 +64,7 @@ project('domain:tp-rdb-domain') {
 
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+        implementation 'org.springframework.boot:spring-boot-starter-test'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     }
 }
