feat: security 의존성, 설정 추가 - build.gradle 의존성 추가 - tp-web-system 모듈 security - tp-base-core 모듈 security static 상수 추가

--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -71,10 +71,12 @@ project('domain:tp-rdb-domain') {
 
 project('system:tp-web-system') {
     dependencies {
-//        implementation project('core:tp-base-core')
-//        testCompileOnly project('core:tp-base-core')
+        implementation project(':core:tp-base-core')
+        testCompileOnly project(':core:tp-base-core')
 
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+        implementation 'org.springframework.boot:spring-boot-starter-security:3.1.5'
     }
 }
 
