feat: tp-web-system.yaml 파일 수정 - static 디렉토리 수정 추가

--- a/tp-back-app/application/tp-back-internal-app/src/main/resources/application.yaml
+++ b/tp-back-app/application/tp-back-internal-app/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: ${profile}
     include:
-      -  ${spring.profiles.active}-user-domain
+      -  ${spring.profiles.active}-tp-web-system
 
 ---
 spring:
