fix: ./gradlw시 롬복인식 에러 수정 - compile시 롬복 인식 가능하도록 의존성 수정

--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -27,7 +27,8 @@ allprojects {
     }
 
     dependencies {
-        implementation 'org.projectlombok:lombok:1.18.28'
+        compileOnly('org.projectlombok:lombok:1.18.28')
+        annotationProcessor("org.projectlombok:lombok:1.18.28")
         testCompileOnly 'org.projectlombok:lombok:1.18.28'
     }
 }
