--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.12'
     id 'io.spring.dependency-management' version '1.1.3'
+    id "org.asciidoctor.jvm.convert" version "3.3.2" // Asciidoctor 플러그인 적용
 }
 
 configurations {
@@ -34,6 +35,37 @@ allprojects {
 }
 
 project('application:tp-back-internal-app') {
+
+    configurations {
+        asciidoctorExt
+    }
+
+    ext {
+        snippetsDir = file('build/generated-snippets')
+    }
+
+    test {
+        outputs.dir snippetsDir
+    }
+
+    asciidoctor {
+        inputs.dir snippetsDir
+        configurations 'asciidoctorExt'
+        dependsOn test
+    }
+
+    bootJar {
+        enabled = true
+        dependsOn asciidoctor
+        from ("${asciidoctor.outputDir}/html5") {
+            into 'static/docs'
+        }
+    }
+
+    jar {
+        enabled = false
+    }
+
     dependencies {
         implementation project(':domain:tp-rdb-domain')
         testCompileOnly project(':domain:tp-rdb-domain')
@@ -44,6 +76,11 @@ project('application:tp-back-internal-app') {
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
         implementation 'org.springframework.boot:spring-boot-starter-test'
+
+        asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:3.0.0'
+        // https://mvnrepository.com/artifact/org.springframework.restdocs/spring-restdocs-mockmvc
+        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:3.0.0'
+
 
         implementation 'org.springframework.boot:spring-boot-starter-web'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
