chore: 테이블 구조 변경, createDate, modifyDate 수정 - 테이블 LocalDate -> LocalDateTime으로 변경 - 일부 컬럼 추가 수정 일부는 진행 예정

--- a/tp-back-app/application/tp-back-internal-app/build.gradle
+++ b/tp-back-app/application/tp-back-internal-app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     testCompileOnly project(':system:tp-web-system')
     implementation project(':system:tp-web-system')
 
+    implementation project(':core:tp-base-core')
+    testCompileOnly project(':core:tp-base-core')
+
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
     implementation 'org.springframework.boot:spring-boot-starter-test'
