--- a/tp-back-app/domain/tp-rdb-domain/build.gradle
+++ b/tp-back-app/domain/tp-rdb-domain/build.gradle
@@ -1,3 +1,51 @@
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.0.12'
+    id 'io.spring.dependency-management' version '1.1.3'
+    // queryDsl 플러그인 사용시 gradle 빌드시 에러 발생
+//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+}
+
+/******* QueryDSL Start *******/
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+    main.java.srcDirs += [querydslDir]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
+}
+
+/******* QueryDSL End *******/
+
+dependencies {
+    implementation project(':core:tp-base-core')
+    testCompileOnly project(':core:tp-base-core')
+
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+}
+
+
 bootJar {
     enabled = false
 }
