feat: 테스트용 memory db 추가 - h2 database 의존성 추가 - 엔티티에 스키마 제거

--- a/tp-back-app/application/tp-back-internal-app/build.gradle
+++ b/tp-back-app/application/tp-back-internal-app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     implementation project(':core:tp-base-core')
     testCompileOnly project(':core:tp-base-core')
 
+    // 테스트용 메모리 디비
+    testRuntimeOnly 'com.h2database:h2'
+
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
