--- a/tp-back-app/domain/tp-rdb-domain/src/test/resources/application.yaml
+++ b/tp-back-app/domain/tp-rdb-domain/src/test/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: test
 
 ---
 spring:
@@ -24,4 +24,4 @@ spring:
 spring:
   config:
     activate:
-      on-profile: common
+      on-profile: test
