--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -59,12 +59,16 @@ project('domain:tp-rdb-domain') {
 
 project('system:tp-web-system') {
     dependencies {
+        implementation project(':domain:tp-rdb-domain')
+        testCompileOnly project(':domain:tp-rdb-domain')
+
         implementation project(':core:tp-base-core')
         testCompileOnly project(':core:tp-base-core')
 
         implementation 'org.springframework.boot:spring-boot-starter-web'
         // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
         implementation 'org.springframework.boot:spring-boot-starter-security:3.1.5'
+        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     }
 }
 
