--- a/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
+++ b/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
@@ -1,3 +1,55 @@
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 904892991881-m8gp175ds1c99iav5pq4uub6cboiu5q9.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - profile
+              - email
+
+          naver:
+            client-id: 8LarolPEJucWnlsDJ3QP
+            client-name: TP-PENGUIN-APP
+            client-secret: jHNQNGgMnZ
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:3000/login/oauth2/code/naver
+            scope:
+              - profile
+              - email
+
+          kakao:
+            client-id: 769bdd63b3a13e6acdb0efc816355bf6
+            client-name: TP-PENGUIN-APP
+            client-secret: twVnsowHE1Bf3lYwuGZ8Z5OSWnnarvXL
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:3000/login/oauth2/code/kakao
+            scope:
+              - profile_nickname
+              - profile_image
+        #              - account_email
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+          #         https://kauth.kakao.com/.well-known/openid-configuration
+          kakao:
+            issuer-uri: https://kauth.kakao.com
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            jwk-set-uri: https://kauth.kakao.com/.well-known/jwks.json
+            user-name-attribute: id
+
+  mvc:
+    static-path-pattern: /static/**
+
 file:
   resource:
     room-path: /tp-penguin-app/image/room/**
