--- a/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
+++ b/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
@@ -60,6 +60,9 @@ file:
     user-path: file:///tp-penguin-app/image/user/
     company-path: file:///tp-penguin-app/image/company/
 
+front:
+  nodeServer: http://dev.tp-penguin-app.site:1901/
+
 token:
   secret: local-secret
 
