--- a/tp-back-app/build.gradle
+++ b/tp-back-app/build.gradle
@@ -66,5 +66,7 @@ project('system:tp-web-system') {
 }
 
 project('core:tp-base-core') {
-    dependencies {}
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+    }
 }
