feat: response redirect uri 수정 - rest-docs 생성

--- a/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
+++ b/tp-back-app/system/tp-web-system/src/main/resources/application-local-tp-web-system.yaml
@@ -62,7 +62,7 @@ file:
     company-path: /tp-penguin-app/image/company/
 
 front:
-  nodeServer: http://dev.tp-penguin-app.site:1901/
+  nodeServer: http://dev.tp-penguin-app.site
 
 token:
   secret: local-secret
