--- a/tp-back-app/system/tp-web-system/src/main/resources/application-dev-tp-web-system.yaml
+++ b/tp-back-app/system/tp-web-system/src/main/resources/application-dev-tp-web-system.yaml
@@ -65,7 +65,7 @@ token:
   issuer: tp-back-app
 
   default:
-    expiration_time: 5000
+    expiration_time: 5000000
 
   refresh:
-    expiration_time: 10000
+    expiration_time: 10000000
